SMA strategy added again

--- a/alpaca/paper-engine-strategy/notebooks/crypto_filter.ipynb
+++ b/alpaca/paper-engine-strategy/notebooks/crypto_filter.ipynb
@@ -2,61 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-05-04T00:03:58.832577Z",
      "start_time": "2025-05-04T00:03:58.826104Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "from crypto_symbols import symbols"
-   ],
-   "outputs": [],
-   "execution_count": 4
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9f742bc308e2dcd9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-04T00:03:59.141660Z",
      "start_time": "2025-05-04T00:03:59.130946Z"
     }
    },
-   "cell_type": "code",
-   "source": "s = json.loads(symbols)",
-   "id": "9f742bc308e2dcd9",
    "outputs": [],
-   "execution_count": 5
+   "source": [
+    "s = json.loads(symbols)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "982801ca2da9b631",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-04T00:04:42.499005Z",
      "start_time": "2025-05-04T00:04:42.489112Z"
     }
    },
-   "cell_type": "code",
-   "source": "ss = [e['symbol'] for e in s]",
-   "id": "982801ca2da9b631",
    "outputs": [],
-   "execution_count": 7
+   "source": [
+    "ss = [e['symbol'] for e in s]"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "60ac61d4c484af38",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-04T00:08:43.304229Z",
      "start_time": "2025-05-04T00:08:43.298554Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "usdc = [e for e in ss if e[-4:] == 'USDC']\n",
-    "usdc"
-   ],
-   "id": "60ac61d4c484af38",
    "outputs": [
     {
      "data": {
@@ -88,21 +89,21 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "source": [
+    "usdc = [e for e in ss if e[-4:] == 'USDC']\n",
+    "usdc"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5efeb9a33506617d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-04T00:08:33.003378Z",
      "start_time": "2025-05-04T00:08:32.999313Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "usdt = [e for e in ss if e[-4:] == 'USDT']\n",
-    "usdt"
-   ],
-   "id": "5efeb9a33506617d",
    "outputs": [
     {
      "data": {
@@ -127,21 +128,21 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "source": [
+    "usdt = [e for e in ss if e[-4:] == 'USDT']\n",
+    "usdt"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b58d33aec64afda6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-04T03:18:34.949276Z",
      "start_time": "2025-05-04T03:18:34.943777Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "usd = [e for e in ss if e[-3:] == 'USD']\n",
-    "usd"
-   ],
-   "id": "b58d33aec64afda6",
    "outputs": [
     {
      "data": {
@@ -177,7 +178,10 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "source": [
+    "usd = [e for e in ss if e[-3:] == 'USD']\n",
+    "usd"
+   ]
   }
  ],
  "metadata": {
